building out the preferences and seasons functionality and also implimenting auth

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,8 +28,18 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/trees">All Trees</a></li>
-        <li><a href="/about">About</a></li>
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'arbor-index' %}">All Trees</a></li>
+          <li><a href="{% url 'pref-index' %}">All Prefs</a></li>
+          <li><a href="{% url 'arbor-create' %}">Add a Tree</a></li>
+          <li><a href="{% url 'pref-create' %}">Add a Pref</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'logout' %}">Log out</a></li>
+        {% else %}
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'home' %}">Login</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
+        {% endif %}
       </ul>
     </nav>
   </header>
