--- a/main_app/templates/trees/index.html
+++ b/main_app/templates/trees/index.html
@@ -5,7 +5,7 @@
 <link 
   rel="stylesheet"
   type="text/css"
-  href="{% static 'css/cats/cat-index.css' %}"
+  href="{% static 'css/trees/tree-index.css' %}"
 />
 {% endblock %}
 
@@ -13,30 +13,33 @@
 
 <section class="page-header">
   <h1>Tree List</h1>
-  <img src="{% static 'images/cool-cat.svg' %}" alt="A cool cat" />
-  <img src="{% static 'images/happy-cat.svg' %}" alt="A happy cat" />
-  <img src="{% static 'images/teacup-cat.svg' %}" alt="A cat in a teacup" />
-  <img src="{% static 'images/cat-in-box.svg' %}" alt="A cat in a box" />
+  <img src="{% static 'images/cool-tree.svg' %}" alt="A cool tree" />
+  <img src="{% static 'images/happy-tree.svg' %}" alt="A happy tree" />
+  <img src="{% static 'images/teacup-tree.svg' %}" alt="A tree in a teacup" />
+  <img src="{% static 'images/tree-in-box.svg' %}" alt="A tree in a box" />
 </section>
 
 <section class="card-container">
-  {% for cat in cats %}
+  {% for tree in trees %}
     <div class="card">
-      <div class="card-content">
-        <div class="card-img-container">
-          <img 
-            src="{% static 'images/sk8r-boi-cat.svg' %}" 
-            alt="A skater boy cat"
-          >
+      <a href="{% url 'tree-detail' tree.id %}">
+        <div class="card-content">
+          <div class="card-img-container">
+            <img 
+              src="{% static 'images/sk8r-boi-tree.svg' %}" 
+              alt="A skater boy tree"
+            >
+          </div>
+          <h2 class="card-title">{{ tree.name }}</h2>
+          <p>A member of the {{ tree.family }} family.</p>
+          {% if tree.lifeSpan > 0 %}
+            <p>Typical lifespan: {{ tree.lifeSpan }} years</p>
+          {% else %}
+            <p>Lifespan varies or is unknown.</p>
+          {% endif %}
+          <p><small>{{ tree.description }}</small></p>
         </div>
-        <h2 class="card-title">{{ cat.name }}</h2>
-        {% if cat.age > 0 %}
-          <p>A {{ cat.age }} year old {{ cat.breed }}</p>
-        {% else %}
-          <p>A {{ cat.breed }} kitten.</p>
-        {% endif %}
-        <p><small>{{ cat.description }}</small></p>
-      </div>
+      </a>
     </div>
   {% endfor %}
 </section>
